--- a/firebase.json
+++ b/firebase.json
@@ -2,12 +2,8 @@
   "database": {
     "rules": "database.rules.json"
   },
-  "firestore": {
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
-  },
   "hosting": {
-    "public": "dist",
+    "public": "dist/plasma-donate",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -19,8 +15,5 @@
         "destination": "/index.html"
       }
     ]
-  },
-  "storage": {
-    "rules": "storage.rules"
   }
 }
